# openloop

./: CREDITS  LICENSE  README.md  meson.build  misc.7z  xledflash.c
ges-examples/: simple.vala
media/: click
src/: appui.vala  bottombar.vala  colours.vala  eyecandy.vala  liveplayback.vala  loop.vala  loopsourcelist.vala  looptile.vala  main.vala  metronome.vala  mimetypes.vala  pipeline.vala  sample.c  sample.h  sample.vapi  sampleplayer.c  sampleplayer.h  sampleplayer.vapi  section.vala  sheduledevents.vala  tile.vala  tilegrid.vala  tilehost.vala
src/Audio/: pipeline.vala  sample.c  sample.h  sample.vapi  sampleplayer.c  sampleplayer.h  samplesink.c  samplesink.h  samplesink.vapi  samplesrc.c  samplesrc.h  samplesrc.vapi
src/DevMode/: metronomeinfo.vala
src/Helpers/: nanosleephelper.c  nanosleephelper.h  nanosleephelper.vapi
src/Threads/: loopimporter.vala  threads.vala
src/Views/: mainwindow.vala
src/Widgets/: bottombar.vala  loopsourcelist.vala  metronomectl.vala  tilegrid.vala  tilehost.vala
